--- a/css/style.css
+++ b/css/style.css
@@ -9,21 +9,23 @@
     font-family: verdana;
 }
 .loginpage{
-    margin:12% auto 7%;
+    margin:17% auto 7%;
     padding: 0;
     border: 1px solid rgb(239, 239, 245);
     max-width: 100%;
+    width: 40%;
     min-width: 500px;
-    width: 30%;
     background: #fff;
 }
 .header{
     background-color: aqua;
     color: #000;
+    height: 100%;
 }
 .formheading{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: top 8px;
+    width: 100%;
 }
 .image{
     width:20%;
@@ -40,6 +42,7 @@ padding: 30px 30px;
 .input2{
     text-align: left;
     padding-left: 5px;
+    font-weight: 700;
 }
 .loginUsername{
     width: 70%;
@@ -48,50 +51,57 @@ padding: 30px 30px;
 .loginPassword{
     width: 70%;
     padding:5px;
-    margin-top: 20px;
-    margin-bottom:2opx;
+    margin-top: 2%;
+    margin-bottom:2%;
 }
 .loginButton{
-    padding: 20px;;
-    width: 100%;
-    border-radius: 15%;
+    margin-right: 2%;
+    margin-left:25% ;
+    padding: 2%;
+    background-color: rgb(0, 174, 255);
+    width:60%;
+    border-radius:.5%;
 }
-.signbtn{
-    background-color: aqua;
-    width:70% ;
-    padding: 5px;
+.loginButton a{
+    text-decoration:none ;
 }
-.signbtn a{
+.signbutton{
+    margin-right: 2%;
+    margin-left:25% ;
+    padding: 2%;
+    background-color:greenyellow;
+    width:60%;
+    border-radius:.5%;
+}
+.signbutton a{
     text-decoration: none;
-
+}
+.signbutton a:hover{
+    background-color: #777;
+    transition-duration: 0.5s;
 }
 #form {
-    background-color: #fff;
-    max-width: 500px;
+    background-color:rgb(117, 114, 114);
+    max-width: 600px;
     margin: 50px auto;
     padding: 30px 20px;
     box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
 }
-
-.registration-form {
+.registration-form  {
     text-align: left;
-    margin-bottom:25px;
+    margin-bottom: 25px;
 }
-
-
-.registration-form label {
-    display: block;
-    margin-bottom: 10px;
-}
-
-.registration-form input,
-.registration-form select {
+.registration-form input{
     border: 1px solid #777;
     border-radius: 2px;
     font-family: inherit;
     padding: 10px;
+    margin: 10px; ;
     display: block;
-    width: 95%;
+    width: 75%;
+}
+.label{
+    color:yellow;
 }
 #button {
     background-color: #05c46b;
@@ -99,8 +109,31 @@ padding: 30px 30px;
     border-radius: 2px;
     font-family: inherit;
     font-size: 21px;
-    display: block;
-    width: 100%;
+    display:flex;
+    justify-content: center;
+    width: 50%; 
     margin-top: 50px;
     margin-bottom: 20px;
+    padding-left: 20px;
+}
+.link a{
+    text-decoration:none;
+}
+.cancelbtn{
+    background-color: yellow;
+    color: #000;
+    font-weight: 700;
+    border: 1px solid #777;
+    border-radius: 2px;
+    font-family: sans-serif;
+    font-size: 21px;
+    display:flex;
+    justify-content: center;
+    width: 50%; 
+    margin-top: 50px;
+    margin-bottom: 20px;
+    padding-left: 20px;
+}
+.cancelbtn a{
+    text-decoration: none;
 }
